# yandasoft

./: CMakeLists.txt  cmake_in_container.sh  genie  genie.sh  make_docker_images.py  run_docker_container.py
apps/: CMakeLists.txt  nimager.cc
askap/parallel/: CMakeLists.txt  ThreadImager.cc  ThreadImager.hh
benchmark/: CMakeLists.txt  TableVisGridderBenchmark.h  bgridding.cc  raw-bench.cc
benchmark/raw/: gridkernel-degrid.cc  gridkernel-grid.cc
coach/: build.cfg  build.sh  coach.cfg  coach.sh  imager.sh  profile.sh  run_utils.sh  simulator.sh  train.sh
deploy/docker/custom/: 001-yandabase  001b-mpich-3.2-yandabase  001b-mpich-yandabase  002-casacore  003-casarest  004-yandasoft-dev-base  docker.md  genie.sh
profiling/: .gitignore  cimager.in  csimulator.in  imager.cfg  simulate.cfg
synthesis/current/apps/: imcontsub.cc
synthesis/current/gridding/: TableVisGridder.cc  TableVisGridder.h  VisGridderFactory.cc
tests/gridding/: CMakeLists.txt  isogridder.cc
wrapper/: params.py  yandatools.py
